Rename directories with roman numerals
Addresses issue #114

--- a/content/ii-present-practice/10.md
+++ b/content/ii-present-practice/10.md
@@ -55,11 +55,11 @@ As mentioned above, sustainability is a crucial issue. The traditional glue-past
 
 For these reasons, in 1995 I started to reconsider all aspects of traditional methods. It has been a long process and remains a work in progress. In the last ten years, I intensified my studies, assessed test results, worked with international researchers, and monitored long-term results.
 
-A big concern is mold growth and attack by *Stegobium paniceum* (the only insect we find on linings). All natural materials are hygroscopic and have that element of risk, but our observations in Italy indicate that problems occur only in specific microclimates with long exposure to high RH and poor ventilation. Recent tests ({% cite 'Fuster-López et al. 2017' %}; see also [Fuster-López et al. in this volume](/8-posters/51/)) demonstrate that the use of close-weave fabrics and some traditional ingredients—such as rye flour and molasses—can increase the risk. A good backing board, some space between the painting and the wall, and some basic control of damp will reduce this risk in a very effective way.
+A big concern is mold growth and attack by *Stegobium paniceum* (the only insect we find on linings). All natural materials are hygroscopic and have that element of risk, but our observations in Italy indicate that problems occur only in specific microclimates with long exposure to high RH and poor ventilation. Recent tests ({% cite 'Fuster-López et al. 2017' %}; see also [Fuster-López et al. in this volume](/viii-posters/51/)) demonstrate that the use of close-weave fabrics and some traditional ingredients—such as rye flour and molasses—can increase the risk. A good backing board, some space between the painting and the wall, and some basic control of damp will reduce this risk in a very effective way.
 
 What worries me most about traditional linings is the amount of adhesive applied to the reverse of the painting. Excessive amounts (we might say abusive amounts) of adhesive, of very strong glues, increase sensitivity to humidity variations, resulting in mechanical stresses being transmitted to the paint layers.
 
-The results of the ICOM-CC International Working Group, available in this publication ([Fuster-López et al. in this volume](/8-posters/51/)), represent the first attempt at a scientific assessment of glue-paste linings. Some conservators have previously published results of experiments with modified recipes ({% cite 'Ackroyd 1995' %}), but a full understanding was missing. Now, for the first time, it has become possible to study the influence of different materials and different application methods from a mechanical, physical, chemical, and biological point of view, and to establish precise parameters for further investigation.
+The results of the ICOM-CC International Working Group, available in this publication ([Fuster-López et al. in this volume](/viii-posters/51/)), represent the first attempt at a scientific assessment of glue-paste linings. Some conservators have previously published results of experiments with modified recipes ({% cite 'Ackroyd 1995' %}), but a full understanding was missing. Now, for the first time, it has become possible to study the influence of different materials and different application methods from a mechanical, physical, chemical, and biological point of view, and to establish precise parameters for further investigation.
 
 ## Materials Selection
 
@@ -121,7 +121,7 @@ The capacity to easily manipulate any single component gives the possibility of 
 
 Starches contain two different polysaccharides—amylopectin and amylase—in an 80:20 ratio, both insoluble in water without heat (\>65°C). By slightly changing this ratio we can change the stiffness: greater flexibility by increasing amylopectin or greater stiffness by increasing amylose. This ratio is reflected in the protein content of a specific flour.
 
-Proteins in wheat starch are mostly composed of glutenin and gliadin, which, when hydrated, form gluten. By changing the ratio of these two proteins or modifying the total amount, the food industry produces different blends that differ in their “strength.” Strength is measured by the W index, which tells us how resistant a dough is in the rising process and how long it retains water and fermentation gas (carbon dioxide). For conservation purposes, a low W (120–170) provides a stiffer film when dry; conversely, increasing the protein content and W to 350–400 makes the film softer and more flexible. Results from the ICOM-CC glue-paste project (see [Fuster-López et al. in this volume](/8-posters/51/)) suggest that a higher gluten content reduces water absorption, provides lower wetting capacities, and reduces reactivity to RH variations.
+Proteins in wheat starch are mostly composed of glutenin and gliadin, which, when hydrated, form gluten. By changing the ratio of these two proteins or modifying the total amount, the food industry produces different blends that differ in their “strength.” Strength is measured by the W index, which tells us how resistant a dough is in the rising process and how long it retains water and fermentation gas (carbon dioxide). For conservation purposes, a low W (120–170) provides a stiffer film when dry; conversely, increasing the protein content and W to 350–400 makes the film softer and more flexible. Results from the ICOM-CC glue-paste project (see [Fuster-López et al. in this volume](/viii-posters/51/)) suggest that a higher gluten content reduces water absorption, provides lower wetting capacities, and reduces reactivity to RH variations.
 
 All additional substances, such as raising agents, baking powders, flavorings, sugars, and the like must be avoided.
 
