--- a/content/ii-present-practice/9.md
+++ b/content/ii-present-practice/9.md
@@ -128,7 +128,7 @@ We recommend that conservators experiment and become comfortable with the system
 
 ## Mist-Lining Dissemination
 
-The SRAL team has imparted their knowledge and experiences of the mist-lining system to the wider conservation field over the years (see the appendix for a chronology of workshops and conferences disseminating the mist-lining system). Students studying conservation in the Netherlands have been instructed in the system since the early 1990s. International interns, fellows, and junior conservators working at SRAL over the past thirty years have all used the system. Papers have been written describing it, and presentations have been given at conferences (see [Barbosa et al.](/8-posters/53/) and [Brandt and Volbracht](/2-present-practice/13/) in this publication; {% cite 'Costantini 2013' %}; {% cite 'Iaccarino Idelson and Garofalo 2019' %}; {% cite 'Ruuben and Robbins 2011' %}). Dissemination has had successes and failures and has led to further modifications in the system. The expertise of the system still remains largely in-house at SRAL, however, and the use of this relatively new system is not widespread. Because the system is adaptive and tailored to the needs of the painting, it is full of variables that may be difficult to grasp if not encountered in practice. Thus, confidence in considering this noninvasive and gentle approach to the structural repair of canvases may be lacking in many conservators less familiar with the system.
+The SRAL team has imparted their knowledge and experiences of the mist-lining system to the wider conservation field over the years (see the appendix for a chronology of workshops and conferences disseminating the mist-lining system). Students studying conservation in the Netherlands have been instructed in the system since the early 1990s. International interns, fellows, and junior conservators working at SRAL over the past thirty years have all used the system. Papers have been written describing it, and presentations have been given at conferences (see [Barbosa et al.](/viii-posters/53/) and [Brandt and Volbracht](/ii-present-practice/13/) in this publication; {% cite 'Costantini 2013' %}; {% cite 'Iaccarino Idelson and Garofalo 2019' %}; {% cite 'Ruuben and Robbins 2011' %}). Dissemination has had successes and failures and has led to further modifications in the system. The expertise of the system still remains largely in-house at SRAL, however, and the use of this relatively new system is not widespread. Because the system is adaptive and tailored to the needs of the painting, it is full of variables that may be difficult to grasp if not encountered in practice. Thus, confidence in considering this noninvasive and gentle approach to the structural repair of canvases may be lacking in many conservators less familiar with the system.
 
 In 2019, with the generous support of the Getty Foundation’s Conserving Canvas initiative, SRAL organized a Mist-Lining Workshop to further disseminate this technique and share our experiences.[^7] The aim was to provide midcareer conservators from different world regions with hands-on experience in this alternative option for the structural repair of canvas paintings. At the same time, this global group also brought new thoughts and inspired further adaptations and developments of the mist-lining system ({% cite 'Nadeau et al. 2020' %}). The workshop was documented in film and print. The video, produced by Bigeye Productions, can be viewed on YouTube for further insight.[^8] The resulting *Mist-Lining Handbook* ({% cite 'Seymour and Strombek, 2022' %}) provides a valuable resource to the field. It is full of information on case studies, material information, and sources. Once practiced, the mist-lining system’s variables become something that the conservator can use to tailor treatment to the particular needs of each case. The materials and equipment needed are low cost and relatively easy to source locally. It is hoped that these resources will give this viable system new traction as a treatment option.
 
