--- a/content/iii-open-questions/15.md
+++ b/content/iii-open-questions/15.md
@@ -114,7 +114,7 @@ Reconstruction of canvas weaves is a relatively new approach. It has come about 
 
 While the clarity of the original weave was hard to discern, a trained eye (in this case, that of Dr. Dan Coughlan, curator and master weaver at Paisley Museum, Scotland) identified the weave as a huckaback, which is a plain weave with a floating warp. Hence, he was able to set up the weaving pattern for a traditional four-frame hand loom. Linen and jute yarn samples were sourced from Jos Vanneste, a Belgian linen company. The closest match to a yarn fragment from the painting was a linen yarn, which was then woven into a canvas by a local Scottish weaver. Empirical testing found that the canvas was more stable on the bias than an equivalent plain weave without a floating warp, and it developed less cusping when tacked onto a stretcher.
 
-The canvas was also prepared with a traditional double ground layer, and, interestingly, drying cracks within these layers were of a very similar size and pattern ({% cite 'Brunton 2018' %}). A more systematic and controlled set of tests is now being performed on these samples using the biaxial tensile tester in the Conservation Research Laboratory at the Kelvin Centre, Glasgow University. Such reconstructions are useful not only for understanding the complexity of canvas but also for possible use as fabrics for structural treatments. Having control over the weaving process allows for a bespoke pattern (see [Loermans’s poster](/8-posters/46/) in these proceedings) and, combined with testing, the ability to tune its properties.
+The canvas was also prepared with a traditional double ground layer, and, interestingly, drying cracks within these layers were of a very similar size and pattern ({% cite 'Brunton 2018' %}). A more systematic and controlled set of tests is now being performed on these samples using the biaxial tensile tester in the Conservation Research Laboratory at the Kelvin Centre, Glasgow University. Such reconstructions are useful not only for understanding the complexity of canvas but also for possible use as fabrics for structural treatments. Having control over the weaving process allows for a bespoke pattern (see [Loermans’s poster](/viii-posters/46/) in these proceedings) and, combined with testing, the ability to tune its properties.
 
 ## Reconstructions for the Contemporary Use of Canvas
 
