--- a/content/iii-open-questions/19.md
+++ b/content/iii-open-questions/19.md
@@ -33,7 +33,7 @@ It is important to recognize the research and innovation that influenced the fie
 
 Papers and discussion during the 1975 ICOM-CC conference in Venice led to a reevaluation of treatment practices. “All at once” structural treatments, using heat and significant vacuum pressure, were the norm before the 1970s. Vishwa Mehra countered with a much less interventive, stepwise approach ({% cite 'Mehra 1975a' %}, {% cite 'Mehra 1978' '' '1978'%}, {% cite 'Mehra 1981a' '' '1981a' %}). Each painting was considered as structurally unique, each aspect of the structural treatment (out-of-plane distortions, tears, flaking, flattening, lining, etc.) was a separate step, and only the necessary treatment steps were undertaken.
 
-As part of his system, Mehra used a low-pressure “cold” table.[^1] Like the tables introduced by Bent Hacke in the 1960s, it pulled high volumes of air through a perforated surface into a plenum below. This enabled drying of an aqueous adhesive while maintaining (low) pressure on the painting ({% cite 'Hacke 1978' %}, {% cite 'Hacke 1981b' '' '1981b' %}). The design of these “suction” tables proliferated, allowing for controlled humidification for relaxation and flattening treatments of paintings, both on and off their auxiliary supports. (See [Jim Coddington’s article](/3-open-questions/20/) in these proceedings.)
+As part of his system, Mehra used a low-pressure “cold” table.[^1] Like the tables introduced by Bent Hacke in the 1960s, it pulled high volumes of air through a perforated surface into a plenum below. This enabled drying of an aqueous adhesive while maintaining (low) pressure on the painting ({% cite 'Hacke 1978' %}, {% cite 'Hacke 1981b' '' '1981b' %}). The design of these “suction” tables proliferated, allowing for controlled humidification for relaxation and flattening treatments of paintings, both on and off their auxiliary supports. (See [Jim Coddington’s article](/iii-open-questions/20/) in these proceedings.)
 
 New lining fabrics and new adhesives were also introduced. Mehra used a woven polyester fabric and a thickened acrylic dispersion ({% cite 'Mehra 1981a' %}). Conservators in Europe turned to acrylic dispersions for cold or low heat, nap-bond linings; Alois Diethelm commercialized these adhesives under the mark Lascaux. In the United States, conservators turned to heat-seal adhesives: Rabin developed a nap-bond system based on PVA adhesives,[^2] and Berger developed Beva 371 based on ethylene vinyl acetate. Fieux developed Fabri-Sil linings, a pressure-sensitive silicone adhesive cured onto Teflon-impregnated fiberglass ({% cite 'Fieux 1978' %}; {% cite 'John G. Shelley Co. 1985' %}). (Initially, Fabri-Sil looked like an excellent option, but bonds failed within a few years [{% cite 'Schwartzbaum 1993' %}; {% cite 'Belloli 1993' %}].)
 
@@ -45,7 +45,7 @@ Mehra, Hedley, and Villers began systematic studies of available synthetic fabri
 
 In 1982, Mecklenburg’s unpublished report “Some Aspects of the Mechanical Behavior of Fabric Supported Paintings: Report to the Smithsonian Institution” circulated widely ({% cite 'Mecklenburg 1982' %}). This had us thinking about how everything fit together; the hygro-thermo-mechanical properties of the individual materials and their contribution to the behavior of the painting as a whole; the influence of the geometry and behavior of the wood stretcher, and the effects of our interventions, such as lining and stretching.
 
-Mecklenburg introduced three concepts: First, that the total tension in a painting (the double red arrow running across the painting in [fig. 19.1](#fig-19-1)) was simply the sum of the individual tensions in each layer (the smaller arrows on the far right in [fig. 19.1](#fig-19-1)). Second, that the response of each layer to changes in RH was not simply a change in dimension but also a change in stiffness. And third, that “force realignment” (later phrased as stress alignment) could explain many deformations of paintings while under tension, as in [figure 19.1a](#fig-19-1). (Curl, a separate mechanism for cupping, is described by [Hough and Michalski](/7-modern-contemporary/40/) in these proceedings.)
+Mecklenburg introduced three concepts: First, that the total tension in a painting (the double red arrow running across the painting in [fig. 19.1](#fig-19-1)) was simply the sum of the individual tensions in each layer (the smaller arrows on the far right in [fig. 19.1](#fig-19-1)). Second, that the response of each layer to changes in RH was not simply a change in dimension but also a change in stiffness. And third, that “force realignment” (later phrased as stress alignment) could explain many deformations of paintings while under tension, as in [figure 19.1a](#fig-19-1). (Curl, a separate mechanism for cupping, is described by [Hough and Michalski](/vii-modern-contemporary/40/) in these proceedings.)
 
 {% figure 'fig-19-1' 'pdf-no-bottom-border' %}
 
@@ -97,13 +97,13 @@ These results corroborate an earlier study by Ploeger et al. of the two formulat
 
 The overall goal of the Lining Project, besides understanding the fundamental mechanics of a painting plus a lining, was to determine whether linings can actually be considered a support for the painting: Can they reduce cupping and cracking, or can they only be considered as a bridge for ruptures in brittle and broken canvas?
 
-The primary measurement for answering this question is stress relaxation—the loss in tension of a restrained sample over time. The primary concept within which to place such measurements is that of viscoelasticity in polymers (see also [Hagan](/1-history/2/) and [Hough and Michalski](/7-modern-contemporary/40/) in this volume). Conservators intuit this concept in their use of the terms *relaxation* and *memory* of deformations. In the initial research on mechanical properties of paintings, such as the tension versus RH studies (see [fig. 19.2](#fig-19-2)), or stress-strain plots, authors were not overly concerned with reporting time issues: How fast was the test? How much time had passed since the initial stretch? Tension and its underlying parameter elasticity depend on time, not just temperature and RH.
+The primary measurement for answering this question is stress relaxation—the loss in tension of a restrained sample over time. The primary concept within which to place such measurements is that of viscoelasticity in polymers (see also [Hagan](/i-history/2/) and [Hough and Michalski](/vii-modern-contemporary/40/) in this volume). Conservators intuit this concept in their use of the terms *relaxation* and *memory* of deformations. In the initial research on mechanical properties of paintings, such as the tension versus RH studies (see [fig. 19.2](#fig-19-2)), or stress-strain plots, authors were not overly concerned with reporting time issues: How fast was the test? How much time had passed since the initial stretch? Tension and its underlying parameter elasticity depend on time, not just temperature and RH.
 
 By 1991, we were placing our review of published data on the mechanics of paints within the framework of polymer viscoelasticity. Specifically, we introduced the primary tool of that framework—the “master curve”—which plotted elasticity over the full range of a polymer’s behavior, from glassy through leathery to rubbery as a function of temperature, plasticizer, and time ({% cite 'Michalski 1991' %}).
 
 To understand whether a lining will actually support the painting and by how much, analysis of results focused on whether the lining is at higher tension than the painting during stretching, during shock and vibration, and during fluctuations in RH and temperature—and on whether the lining can maintain this support over many years. Sample preparation and experimental procedures have been published elsewhere ({% cite 'Michalski and Daly Hartin 1996' %}; {% cite 'Daly Hartin et al. 2010' %}, {% cite 'Daly Hartin et al. 2011' '' '2011' %}, {% cite 'Daly Hartin et al. 2015a' '' '2015a' %}; and {% cite 'Michalski et al. 2014' %}). The 2015 article also summarizes the results of the project and their implications for linings.
 
-Tension was measured continuously over time. If the sample is undergoing stress relaxation, then the tension drops over time, as shown by all curves in [figure 19.5](#fig-19-5). The process of building these master curves that extend to very short and very long times is described by [Hagan](/1-history/2) in this volume.
+Tension was measured continuously over time. If the sample is undergoing stress relaxation, then the tension drops over time, as shown by all curves in [figure 19.5](#fig-19-5). The process of building these master curves that extend to very short and very long times is described by [Hagan](/i-history/2) in this volume.
 
 {% figure 'fig-19-5' %}
 
@@ -117,7 +117,7 @@ The influence of the lining in reducing cupping was studied using a set of squar
 
 ### RH Change
 
-We measured the response of samples to RH fluctuations up to 70% RH to give comparative data on the ability of the lining to support the stress in a painting during daily humidity cycles ({% cite 'Daly Hartin et al. 2015a' %}). Some of these data are shown elsewhere in these proceedings (see [fig. 2.4](/1-history/2/#fig-2-4/) in Hagan in these proceedings). The sailcloth + Beva lining, unaffected by RH, provides a constant absolute level of support during RH fluctuations, but during periods of very low RH (20%), rising tension in the oil painting overwhelms that of the sailcloth + Beva (i.e., the system goes from [fig. 19.1b](#fig-19-1) to [fig. 19.1a](#fig-19-1)). Linen + wax is very different; it completely blocks response to one hour of 70% RH, and blocks response to a twelve-hour exposure by two-thirds. (It is not our intent to promote wax linings, but to understand them as historic treatments with advantages as well as known disadvantages.)
+We measured the response of samples to RH fluctuations up to 70% RH to give comparative data on the ability of the lining to support the stress in a painting during daily humidity cycles ({% cite 'Daly Hartin et al. 2015a' %}). Some of these data are shown elsewhere in these proceedings (see [fig. 2.4](/i-history/2/#fig-2-4/) in Hagan in these proceedings). The sailcloth + Beva lining, unaffected by RH, provides a constant absolute level of support during RH fluctuations, but during periods of very low RH (20%), rising tension in the oil painting overwhelms that of the sailcloth + Beva (i.e., the system goes from [fig. 19.1b](#fig-19-1) to [fig. 19.1a](#fig-19-1)). Linen + wax is very different; it completely blocks response to one hour of 70% RH, and blocks response to a twelve-hour exposure by two-thirds. (It is not our intent to promote wax linings, but to understand them as historic treatments with advantages as well as known disadvantages.)
 
 This ability of wax linings to reduce sensitivity to short RH fluctuations (1–12 hours) must be placed alongside the increased sensitivity to longer RH fluctuations shown by Andersen and colleagues ({% cite 'Andersen et al. 2014' %}). They showed that a restrained sample of an old wax-lined painting that had not yet been exposed to the permanent relaxation that occurs at 90% RH ([fig. 19.2](#fig-19-2), double brown line) increased dramatically in tension at RH above \~60% when exposed for at least eighteen hours. Whereas our short-term data showed the moisture barrier effects of wax linings, Andersen’s data showed the transformation of the canvas from porous yarns, which need to swell considerably before they tighten the textile, into a composite of fibers embedded in a wax matrix that tightens as soon as any fiber swelling occurs. The longer exposure permitted this to happen. Andersen’s eighteen-hour exposures also showed a second phenomenon: in the second cycle, after the exposure to 90% RH ([fig. 19.2](#fig-19-2), dashed double brown line), the V-shape response seen in the graph reverted to more of a hockey-stick shape. Something was transformed irreversibly in the canvas by a single exposure to high RH while restrained.
 
