--- a/content/iii-open-questions/21.md
+++ b/content/iii-open-questions/21.md
@@ -15,7 +15,7 @@ abstract: "In this paper, Vishwa Mehra’s eight requirements for linings—as w
 
 ## Introduction
 
-The aim of this paper is to revisit and evaluate some early requirements for linings of canvas paintings proposed by Vishwa Mehra ({% cite 'Mehra 1972' %}) and review them in a contemporary context. The requirements have been very influential within the field of conservation. They were used as guidelines for working conservators and teachers in structural conservation (see [Mikkel Scharff's paper](/1-history/3/) in this publication), and the recommendations have been referenced in normative discussions about conservation praxis. Mehra’s ideas inspired a whole generation of conservators and influenced best practice considerations in structural conservation of canvas paintings for decades ({% cite 'Beltinger 1995' %}; {% cite 'Hackney et al. 2012' %}; {% cite 'Phenix 1995' %}; {% cite 'van Och and Hoppenbrouwers 2003' %}).
+The aim of this paper is to revisit and evaluate some early requirements for linings of canvas paintings proposed by Vishwa Mehra ({% cite 'Mehra 1972' %}) and review them in a contemporary context. The requirements have been very influential within the field of conservation. They were used as guidelines for working conservators and teachers in structural conservation (see [Mikkel Scharff's paper](/i-history/3/) in this publication), and the recommendations have been referenced in normative discussions about conservation praxis. Mehra’s ideas inspired a whole generation of conservators and influenced best practice considerations in structural conservation of canvas paintings for decades ({% cite 'Beltinger 1995' %}; {% cite 'Hackney et al. 2012' %}; {% cite 'Phenix 1995' %}; {% cite 'van Och and Hoppenbrouwers 2003' %}).
 
 Vishwa Mehra is an Indian conservator of paintings and an art historian born in 1931. He studied conservation in India, Yugoslavia, and Rome and worked in Israel before he acquired a position at the Central Research Laboratory for Objects of Art and Science, in Amsterdam.[^1]
 
@@ -93,7 +93,7 @@ The first step is to identify the risks. Using Mehra’s guidance and some updat
 
 {% figure 'table-21-2' 'pdf-float-top' %}
 
-In the example of star diagrams for a lining in [figure 21.1](#fig-21-1), the risk for each parameter for a particular painting has been assessed. The nature of specific paintings and treatments will change the nature of the risk, of course. Risk factors can be added or subtracted as appropriate, and different options can then be compared. Other risks, such as weight change, out-of-plane forces, infestation, and mold growth can also be assessed as needed. In some cases, the values for various parameters can be measured in a lab, and the outcome can then be adapted to the same scale, as seen in [Fuster-López et al.](/8-posters/51/) in this publication.
+In the example of star diagrams for a lining in [figure 21.1](#fig-21-1), the risk for each parameter for a particular painting has been assessed. The nature of specific paintings and treatments will change the nature of the risk, of course. Risk factors can be added or subtracted as appropriate, and different options can then be compared. Other risks, such as weight change, out-of-plane forces, infestation, and mold growth can also be assessed as needed. In some cases, the values for various parameters can be measured in a lab, and the outcome can then be adapted to the same scale, as seen in [Fuster-López et al.](/viii-posters/51/) in this publication.
 
 ## Conclusion
 
