--- a/content/iv-case-studies/22.md
+++ b/content/iv-case-studies/22.md
@@ -147,7 +147,7 @@ Mowiol and chalk mix filler at 25%: 240 g Mowiol GE 04-86, 1000 ml water, enou
 
 [^1]: The conservation treatment is described in a series of short films on the National Gallery website: <https://www.nationalgallery.org.uk/behind-the-scenes/restoring-artemisia>.
 
-[^2]: This paper complements the contribution in this publication by [Paul Ackroyd](/2-present-practice/8/), National Gallery, London.
+[^2]: This paper complements the contribution in this publication by [Paul Ackroyd](/ii-present-practice/8/), National Gallery, London.
 
 [^3]: The flattened right edge was to be retained in the current treatment. See also {% cite 'Keith et al. 2019' %}, 6, 16 (n.11).
 
