--- a/content/vi-interventions/34.md
+++ b/content/vi-interventions/34.md
@@ -100,7 +100,7 @@ The entire procedure described is observable in *Adoration of the Shepherds*, by
 
 The Soderini were one of the main patrons of Marco Benefial, a painter who always worked with Domenico Michelini, who was the most important restorer in Rome in the first half of the eighteenth century.[^12] We can therefore infer that Michelini also worked for the Soderini, and we can attribute this lining to him.
 
-It is interesting to observe that in the eighteenth century there were famous “duo” collaborations between restorers and painters, in which the restorer could not paint at all and would carry out the lining, the filling, and sometimes the cleaning,[^13] while the painter would retouch.[^14] Such famous duos include D. Michelini and M. Benefial, and later G. Principe and P. Anesi or D. Corvi.[^15] (See [Cerasuolo’s paper](/1-history/5/) in these proceedings for more on this division of labor.)
+It is interesting to observe that in the eighteenth century there were famous “duo” collaborations between restorers and painters, in which the restorer could not paint at all and would carry out the lining, the filling, and sometimes the cleaning,[^13] while the painter would retouch.[^14] Such famous duos include D. Michelini and M. Benefial, and later G. Principe and P. Anesi or D. Corvi.[^15] (See [Cerasuolo’s paper](/i-history/5/) in these proceedings for more on this division of labor.)
 
 Documents show the restorer Giovanni Principe, heir and son-in-law of Michelini, working in the same environment where Giovanni Torlonia conducted his business. Therefore, it is easy to imagine that they had business interests in common. However, many of the linings that have been preserved bear the Torlonia seal, which dates from the time when the inventory of the collection was drawn up, at the very beginning of the nineteenth century.
 
