--- a/content/vii-modern-contemporary/40.md
+++ b/content/vii-modern-contemporary/40.md
@@ -43,7 +43,7 @@ If a reinforcement is added to the verso and if the painting has zero tension, t
 
 {% figure 'fig-40-2' %}
 
-The deformations shown in figures 40.1 and 40.2 are not static; they can only be measured and understood within the framework of viscoelastic mechanics; that is, one must consider time. Large elastic deformations of paints can be accomplished in as little as seconds when high temperature and plasticizer are used, whereas at room temperature, large elastic movements take months or years. On the one hand, trying to bend a paint film quickly at room temperature will fracture it; on the other hand, successfully flattened paint can recover the memory of its old deformation over the course of months and years. (For a theoretical background, see papers in these proceedings by [Hagan](/1-history/2/) and by [Daly-Hartin, Michalski, and Hagan.](/3-open-questions/19/))
+The deformations shown in figures 40.1 and 40.2 are not static; they can only be measured and understood within the framework of viscoelastic mechanics; that is, one must consider time. Large elastic deformations of paints can be accomplished in as little as seconds when high temperature and plasticizer are used, whereas at room temperature, large elastic movements take months or years. On the one hand, trying to bend a paint film quickly at room temperature will fracture it; on the other hand, successfully flattened paint can recover the memory of its old deformation over the course of months and years. (For a theoretical background, see papers in these proceedings by [Hagan](/i-history/2/) and by [Daly-Hartin, Michalski, and Hagan.](/iii-open-questions/19/))
 
 To maintain flatness over the years, a reinforcement must stress relax much more slowly than the paint layers. This suggests that one should select either inorganic materials (metal, glass) or highly cross-linked, filled polymers.
 
@@ -171,7 +171,7 @@ Only one mystery remained: since the stainless-steel strips, treatment 4, did no
 
 ### Viscoelastic Response over Time
 
-In the graph on left in [figure 40.8](#fig-40-8), we can follow the viscoelastic behavior of the treatments that were never keyed out, starting at five minutes after they were released from the suction table up to twenty-one years later. This type of graph—the logarithm of an elastic measurement versus the logarithm of time (a log-log plot)—is conventional in viscoelastic studies of polymers, because it can be placed in the context of master curves, as described elsewhere in these proceedings by [Daly Hartin et al.](/3-open-questions/19/) and by [Hagan](/1-history/2/). The heavy gray line at the top of the graph on left in [figure 40.8](#fig-40-8) shows the slope of the master curve for stress relaxation of oil paintings measured by Daly Hartin et al. for the range of five minutes to one hundred years, which was 1/13, that is, 1 log unit in height for each 13 log units of time.[^9] The overall slope of the treatments that failed (and allowed the cupping to return) is similar to this slope. Even sized samples with a rapid increase in cupping in the first few hours followed by a striking decrease that lasted several months (treatments 10, 11, 12, 13), did return over the years to an overall slope of \~1/13, if one simply considers the first and last data points.
+In the graph on left in [figure 40.8](#fig-40-8), we can follow the viscoelastic behavior of the treatments that were never keyed out, starting at five minutes after they were released from the suction table up to twenty-one years later. This type of graph—the logarithm of an elastic measurement versus the logarithm of time (a log-log plot)—is conventional in viscoelastic studies of polymers, because it can be placed in the context of master curves, as described elsewhere in these proceedings by [Daly Hartin et al.](/iii-open-questions/19/) and by [Hagan](/i-history/2/). The heavy gray line at the top of the graph on left in [figure 40.8](#fig-40-8) shows the slope of the master curve for stress relaxation of oil paintings measured by Daly Hartin et al. for the range of five minutes to one hundred years, which was 1/13, that is, 1 log unit in height for each 13 log units of time.[^9] The overall slope of the treatments that failed (and allowed the cupping to return) is similar to this slope. Even sized samples with a rapid increase in cupping in the first few hours followed by a striking decrease that lasted several months (treatments 10, 11, 12, 13), did return over the years to an overall slope of \~1/13, if one simply considers the first and last data points.
 
 {% figure 'fig-40-8' %}
 
@@ -237,4 +237,4 @@ Our conclusions fall into two categories: those that have practical ramification
 
 [^9]: The slope of the stress relaxation is actually negative 1/13, the mirror image of the +1/13 of creeping of cupping.
 
-[^10]: There is no “immediate” time zero in viscoelasticity; the springback would have occurred during several milliseconds as the suction pressure decreased, and with the correct tools one could have measured cupping heights growing from those milliseconds forward to our first data point at five minutes. Milliseconds would enter the glassy plateau shown by [Daly Hartin et al.](/3-open-questions/19/) for millisecond events.
+[^10]: There is no “immediate” time zero in viscoelasticity; the springback would have occurred during several milliseconds as the suction pressure decreased, and with the correct tools one could have measured cupping heights growing from those milliseconds forward to our first data point at five minutes. Milliseconds would enter the glassy plateau shown by [Daly Hartin et al.](/iii-open-questions/19/) for millisecond events.
