--- a/content/viii-posters/51.md
+++ b/content/viii-posters/51.md
@@ -99,7 +99,7 @@ Results evidenced that biodegradation is governed by the flour milling and flour
 
 {% figuregroup '2' 'fig-51-4-a, fig-51-4-b, fig-51-4-c, fig-51-4-d' '**Figure 51.4** Detail of microbiological study. Binocular examination of contaminated samples at the end of the test (25× magnification), showing spores and mycelium of mold species that have contaminated the samples. (a) Rye T70, open-weave fabric. (b) Wheat T80, close-weave fabric. &#40;c) and (d) TK. Image: Courtesy of the research team' %}
 
-The need to agree on objective parameters that allow the comparison of the different variables considered when studying materials for a given treatment has been suggested by [Cecil Krarup Andersen](/3-open-questions/21/) in this publication. Such parameters could help conservators make informed decisions based on the mid- to long-term vulnerability of the materials used. [Figure 51.5](#fig-51-5) shows different star diagrams corresponding to the eight glue-paste linings studied. Values of 1 to 5 are given for each risk factor, with 1 being low risk and 5 high risk. This means that numeric values measured for each factor ({% cite 'Fuster López et al. 2017' %}) are normalized to fit this scale.
+The need to agree on objective parameters that allow the comparison of the different variables considered when studying materials for a given treatment has been suggested by [Cecil Krarup Andersen](/iii-open-questions/21/) in this publication. Such parameters could help conservators make informed decisions based on the mid- to long-term vulnerability of the materials used. [Figure 51.5](#fig-51-5) shows different star diagrams corresponding to the eight glue-paste linings studied. Values of 1 to 5 are given for each risk factor, with 1 being low risk and 5 high risk. This means that numeric values measured for each factor ({% cite 'Fuster López et al. 2017' %}) are normalized to fit this scale.
 
 {% figure 'fig-51-5' %}
 
