--- a/content/viii-posters/53.md
+++ b/content/viii-posters/53.md
@@ -72,7 +72,7 @@ A spun-yarn polyester fabric was considered a good lining fabric due to its avai
 
 ### Lining Table
 
-A stiff, solid support was desired during the lining process to assist in mitigating the planar distortions present in original support. As a conventional low-pressure table would have been too small, a makeshift adaptive lining table was constructed ([fig. 53.2](#fig-53-2)). The lining table described is an adaptation of the low-pressure envelope used in the mist-lining process (see [Seymour, Strombek, and Van Och](/2-present-practice/9/) in this volume). Vinyl flooring was laid on the wooden floor, creating a firm, smooth surface with sufficient cushioning for any painted impasto areas. This was covered with a thick HDPE plastic sheet. This sheet extended beyond the vinyl and was stretched and secured taut to the floor with tape to prevent movement during lining. This sheet was punctured with holes to ensure that the painting, placed facedown, and lining canvas conform to the vinyl substrate during lining. This provided the required resistance during lining to apply pressure to high points, such as the raised edges of the folds of the original canvas. This plastic sheet provides the lower side of the lining table. A piece of open-weave cotton cheesecloth was placed over this plastic sheet to increase airflow within the lining envelope.
+A stiff, solid support was desired during the lining process to assist in mitigating the planar distortions present in original support. As a conventional low-pressure table would have been too small, a makeshift adaptive lining table was constructed ([fig. 53.2](#fig-53-2)). The lining table described is an adaptation of the low-pressure envelope used in the mist-lining process (see [Seymour, Strombek, and Van Och](/ii-present-practice/9/) in this volume). Vinyl flooring was laid on the wooden floor, creating a firm, smooth surface with sufficient cushioning for any painted impasto areas. This was covered with a thick HDPE plastic sheet. This sheet extended beyond the vinyl and was stretched and secured taut to the floor with tape to prevent movement during lining. This sheet was punctured with holes to ensure that the painting, placed facedown, and lining canvas conform to the vinyl substrate during lining. This provided the required resistance during lining to apply pressure to high points, such as the raised edges of the folds of the original canvas. This plastic sheet provides the lower side of the lining table. A piece of open-weave cotton cheesecloth was placed over this plastic sheet to increase airflow within the lining envelope.
 
 {% figure 'fig-53-2' %}
 
