--- a/content/i-history/3.md
+++ b/content/i-history/3.md
@@ -45,7 +45,7 @@ At the time of the Greenwich conference, the Royal Danish Academy of Fine Arts S
 
 I entered the paintings conservation program as part of the third admission of undergraduate students in conservation, in late August 1977. There had been many challenges in setting up a training program during the first four years, but the class of 1977 found a three-year educational program with quite a structured curriculum. We attended lectures, undertook a lot of practical work and exercises, and practiced extensive documentation, including photographic and X-ray techniques. Microscopy was the main analytical technique available to study a painting, its surfaces, and layered structure. The thorough process of documenting observations, reflections, descriptions, and errors was considered a major leap forward in the professionalization of the field and underscored the importance of compiling empirical knowledge for future use. Coursework was based on established treatment techniques, but we were also introduced to new techniques and materials as directed by teachers.
 
-The available literature was limited. Descriptions of established techniques were provided by copies of the small Greenwich offprints, including the useful *Handbook of Terms* (see {% cite 'Percival-Prescott and Lewis 2003' %}). Hacke and others presented new developments, discussing the outcomes of the Greenwich conference and the innovations of Mehra and Berger. Hacke had experimented with suction-table techniques (termed *low-pressure techniques*) since the 1960s ({% cite 'Hacke 1963-64' %}, {% cite 'Hacke 1976' '' '1976' %}, {% cite 'Hacke 1978' '' '1978' %}), and in 1979 the School of Conservation received its first custom-built low-pressure table, which he had designed. Hacke held a seminar in September of that year for the students on suction-table techniques, in which we tried out the equipment and discussed “requirements” or options for treatments. These requirements were similar to those proposed by Mehra (see [Andersen](/3-open-questions/21/) in this volume) and consisted of a set of principles, requirements, options, and methods guided by a philosophy that had formed over the previous years and constituted the basis for the equipment’s design as well as the techniques employed. The seminar caused quite a stir, as the new equipment, the new techniques, and the whole approach offered interesting alternatives to the techniques we had tried during the previous years of coursework—and had, we understood, been intensively discussed at Greenwich.
+The available literature was limited. Descriptions of established techniques were provided by copies of the small Greenwich offprints, including the useful *Handbook of Terms* (see {% cite 'Percival-Prescott and Lewis 2003' %}). Hacke and others presented new developments, discussing the outcomes of the Greenwich conference and the innovations of Mehra and Berger. Hacke had experimented with suction-table techniques (termed *low-pressure techniques*) since the 1960s ({% cite 'Hacke 1963-64' %}, {% cite 'Hacke 1976' '' '1976' %}, {% cite 'Hacke 1978' '' '1978' %}), and in 1979 the School of Conservation received its first custom-built low-pressure table, which he had designed. Hacke held a seminar in September of that year for the students on suction-table techniques, in which we tried out the equipment and discussed “requirements” or options for treatments. These requirements were similar to those proposed by Mehra (see [Andersen](/iii-open-questions/21/) in this volume) and consisted of a set of principles, requirements, options, and methods guided by a philosophy that had formed over the previous years and constituted the basis for the equipment’s design as well as the techniques employed. The seminar caused quite a stir, as the new equipment, the new techniques, and the whole approach offered interesting alternatives to the techniques we had tried during the previous years of coursework—and had, we understood, been intensively discussed at Greenwich.
 
 We had also begun to follow conservators who were beginning to publish post-Greenwich information on canvas painting behavior and its response during treatment. Everything taken together, to be honest, made us feel somewhat lost at times. We were trying to understand the real impact of the more established techniques as well as understand how the new techniques worked. It was obvious that more information or knowledge was needed, but we tried to follow the publications and the views expressed, though they at times conflicted somewhat with the views of our teachers and tutors. There was a clear trend toward less intervention or even no intervention, raising the question of whether to treat or not to treat a given painting. And if treatment was preferable, how were we to approach it?
 
@@ -61,7 +61,7 @@ The more recent part of the literature review, through the 1970s, was easier, as
 
 Examination of the thesis painting, the literature review, and my considerations resulted in a treatment proposal that was primarily based on treatment philosophy and techniques related to Mehra and Hacke—their publications as well as the lectures and workshops with Hacke.
 
-The alternative “low-pressure table” equipment to be used, the “lamination” adhesives and technique, and the underlying philosophy rested on a new approach that Mehra and Hacke shared to a considerable degree but not entirely. There were significant differences between the two, and it is interesting to compare Mehra’s statements (treatment options) from 1972 (see [Andersen in this publication](/3-open-questions/21/)) and his subsequent publications in the 1970s with Hacke’s statements published during the same decade ({% cite 'Hacke 1976' %}, {% cite 'Hacke 1978' '' '1978' %}), and compiled in 1979 ([fig. 3.1](#fig-3-1); [table 3.1](#table-3-1)). The second column of table 3.1 presents a set of options for proper lining treatment that came out of a seminar Hacke held at the School of Conservation in September 1979. The list was compiled by the students based on the seminar and Hacke’s previous publications ({% cite 'Hacke 1976' %}, {% cite 'Hacke 1978' '' '1978' %}).
+The alternative “low-pressure table” equipment to be used, the “lamination” adhesives and technique, and the underlying philosophy rested on a new approach that Mehra and Hacke shared to a considerable degree but not entirely. There were significant differences between the two, and it is interesting to compare Mehra’s statements (treatment options) from 1972 (see [Andersen in this publication](/iii-open-questions/21/)) and his subsequent publications in the 1970s with Hacke’s statements published during the same decade ({% cite 'Hacke 1976' %}, {% cite 'Hacke 1978' '' '1978' %}), and compiled in 1979 ([fig. 3.1](#fig-3-1); [table 3.1](#table-3-1)). The second column of table 3.1 presents a set of options for proper lining treatment that came out of a seminar Hacke held at the School of Conservation in September 1979. The list was compiled by the students based on the seminar and Hacke’s previous publications ({% cite 'Hacke 1976' %}, {% cite 'Hacke 1978' '' '1978' %}).
 
 {% figure 'fig-3-1' %}
 
@@ -103,7 +103,7 @@ In the 1980s, after the relatively new suction table was added as new equipment 
 
 Construction of minisuction equipment was the result of one student thesis during these years ({% cite 'Mitka 1985' %}). A different student thesis included the construction of a large suction table ({% cite 'Petéus 1984' %}), and another large, experimental table was built by Mitka at the School of Conservation. All these tables had built-in heating capacity, and the latter included conditioned air which flowed in from below or via a chamber above the painting during treatment on the suction table. Built-in sensors enabled the user to follow and record temperature and humidity on paper tape.
 
-Similar new—and even larger—low-pressure tables were designed and built ad hoc for special projects in situ in manor houses or for general use in the Danish conservation studios. Comparable activities took place in many countries, with either in-house designed equipment or commercial suction tables ({% cite 'Reeve 1984' %}). The interest in the techniques and equipment (see [Coddington in this publication](/3-open-questions/20/)) and the results of the construction and use of suction tables were reported and discussed at conferences such as ICOM-CC, including the 1984 ICOM-CC conference in Copenhagen.
+Similar new—and even larger—low-pressure tables were designed and built ad hoc for special projects in situ in manor houses or for general use in the Danish conservation studios. Comparable activities took place in many countries, with either in-house designed equipment or commercial suction tables ({% cite 'Reeve 1984' %}). The interest in the techniques and equipment (see [Coddington in this publication](/iii-open-questions/20/)) and the results of the construction and use of suction tables were reported and discussed at conferences such as ICOM-CC, including the 1984 ICOM-CC conference in Copenhagen.
 
 In the following six years, summer programs on the subject were organized at the School of Conservation (in collaboration with ICCROM) to introduce and discuss suction-table techniques and principles and making it possible for numerous participants over the years to try out selected techniques ([fig. 3.4](#fig-3-4)). Discussions were lively ([figs. 3.5](#fig-3-5), [3.6](#fig-3-6)) and included technical and ethical debates on the specific aspects of the techniques and the use of new materials. Such topics included nap-bond acrylic dispersion-adhesives, EVA-based adhesives (e.g., Beva 371), fiberglass cloth, limited interventions, temperature, humidity, strip-linings, loose-linings, and much more. In tune with the prevailing discussions in paintings conservation in general, the idea of how much treatment was really necessary—and if so, what kind—was discussed as well, and Percival-Prescott’s 1974 concept of the lining cycle and whether to treat or not to treat was a regular part of conversations.
 
