--- a/content/vii-modern-contemporary/38.md
+++ b/content/vii-modern-contemporary/38.md
@@ -72,7 +72,7 @@ For paintings meant to be displayed without frames or with only modest strip fra
 
 The most common structural damage we see in our studio is impact-related cracking of the paint film. This type of cracking often takes the form of concentric circles or feather-like shapes, resulting from accidental knocks to the face or the reverse. They also appear as straight lines directly on top of the edges of stretcher lips, rails, and crossbars, caused by repeated contact with the sub-support, or as smaller systems along the crossbars where people have distended the back of the canvas while grabbing the bars in transit.
 
-While aesthetically disturbing, these impact damages do not always pose an actual threat to the overall stability of the painting. Successful flattening of such damage has always depended on softening or reforming both the paint and ground layers while simultaneously stiffening the canvas layer. Doing this successfully through localized treatment is possible, but the history and literature on treating cracks without resorting to lining is scant and the conclusions often discouraging. Moisture, solvent, heat, and pressure have been explored in various combinations ({% cite 'Gridley 2017' %}). Experiments have been carried out in which the reverse of the canvas is treated in various ways to equilibrate the distortion caused on the face by local breaks in tension ({% cite 'Hough and Michalski 1999' %}; {% cite 'Dimond and Young 2003' %}; [Hough and Michalski](/7-modern-contemporary/40/) in this volume), but there are practical challenges, and local treatments are not always less time-consuming than global interventions.
+While aesthetically disturbing, these impact damages do not always pose an actual threat to the overall stability of the painting. Successful flattening of such damage has always depended on softening or reforming both the paint and ground layers while simultaneously stiffening the canvas layer. Doing this successfully through localized treatment is possible, but the history and literature on treating cracks without resorting to lining is scant and the conclusions often discouraging. Moisture, solvent, heat, and pressure have been explored in various combinations ({% cite 'Gridley 2017' %}). Experiments have been carried out in which the reverse of the canvas is treated in various ways to equilibrate the distortion caused on the face by local breaks in tension ({% cite 'Hough and Michalski 1999' %}; {% cite 'Dimond and Young 2003' %}; [Hough and Michalski](/vii-modern-contemporary/40/) in this volume), but there are practical challenges, and local treatments are not always less time-consuming than global interventions.
 
 Treating numerous similar damages one by one can be both labor intensive and expensive. However, there are collectors for whom an “untouched” or minimally treated artwork commands a premium, so there is value in underwriting the cost and time such treatments consume. This attitude has allowed our studio to develop expertise in carrying out such treatments. Treatment of impact cracks is often the first structural intervention in a modern or contemporary painting’s life, and it is very important to acknowledge that better future treatments may be possible only if we tread lightly now.
 
@@ -92,7 +92,7 @@ Perhaps the most significant material difference between older and newer paintin
 
 In the past two decades, significant analysis and research has been done on acrylics. Much of it has centered on the various paint components and additives, as well as their aging properties, and what that means for cleaning,[^2] but from a structural repair perspective, acrylic has some unique features. Its continued sensitivity to moisture, heat, and commonly used solvents such as alcohols and ketones makes it an ideal candidate for reforming ({% cite 'Zumbühl et al. 2007' %}). When the acrylic is confined to the ground and size layer, with other media in the image layers, there are additional opportunities to manipulate its properties, allowing less interference with the paint and canvas layers.
 
-Since World War II, when imported linen was hard to come by, cotton duck has been widely used in the United States, and to a lesser degree elsewhere. It became popular due to availability of large bolt sizes and comparatively low cost. It is unclear what the widespread use of cotton supports will bring us in terms of future structural problems, but in my experience they seem to suffer less embrittlement than linen during aging, even though the shorter and fluffier fibers are harder to work with individually, as required in a thread-by-thread tear mending. Linen, still widely used globally, retains its strength and resiliency for decades, allowing conservators to delay lining or other major structural interventions. Ongoing research into the materials and structure of aging contemporary primed canvases remains necessary to guide us in the future (see [Carter et al.](/8-posters/62/) in this volume).
+Since World War II, when imported linen was hard to come by, cotton duck has been widely used in the United States, and to a lesser degree elsewhere. It became popular due to availability of large bolt sizes and comparatively low cost. It is unclear what the widespread use of cotton supports will bring us in terms of future structural problems, but in my experience they seem to suffer less embrittlement than linen during aging, even though the shorter and fluffier fibers are harder to work with individually, as required in a thread-by-thread tear mending. Linen, still widely used globally, retains its strength and resiliency for decades, allowing conservators to delay lining or other major structural interventions. Ongoing research into the materials and structure of aging contemporary primed canvases remains necessary to guide us in the future (see [Carter et al.](/viii-posters/62/) in this volume).
 
 ## Conclusion
 
