--- a/content/viii-posters/63.md
+++ b/content/viii-posters/63.md
@@ -88,9 +88,7 @@ The target work was an acrylic painting by Masayoshi Nameki. The canvas had alre
 
     {% figure 'table-63-1' 'is-table-scale-5 pdf-float-top' %}
 
-7.  Canvas shrinkage was recorded directly after each application of water, after the desalination process was totally finished, and the following day, when the canvas had dried ([fig. 63.7](#fig-63-7)).
-
-    {% figure 'fig-63-7' %}
+7.  Canvas shrinkage was recorded directly after each application of water, after the desalination process was totally finished, and the following day, when the canvas had dried.
 
 </div>
 
